# FSM-Graphical-Editor

./: README.md  action_handlers.py  animation_manager.py  bsm_designer.spec  c_code_generator.py  create_dummy_icons.py  dialogs.py  editor_widget.py  main.py  modern_welcome_screen.py  pyproject.toml  requirements.txt  resource_monitor.py  resources.qrc  resources_rc.py  ui_manager.py  ui_modernization.py  ui_virtual_hardware_manager.py  undo_commands.py  virtual_hardware_widgets.py  vscode_time_data.json
.history/: README_20250712182527.md  action_handlers_20250628184138.py  action_handlers_20250628190438.py  action_handlers_20250628193741.py  action_handlers_20250628213025.py  action_handlers_20250628231337.py  action_handlers_20250628231354.py  action_handlers_20250628233208.py  action_handlers_20250629141149.py  action_handlers_20250629141819.py  action_handlers_20250629231337.py  action_handlers_20250630083036.py  action_handlers_20250630085527.py  action_handlers_20250630192930.py  action_handlers_20250701091642.py  action_handlers_20250702020030.py  action_handlers_20250702052911.py  action_handlers_20250702052948.py  action_handlers_20250702054043.py  action_handlers_20250707054610.py  action_handlers_20250707054707.py  action_handlers_20250708075653.py  action_handlers_20250708075725.py  action_handlers_20250708075757.py  action_handlers_20250708102707.py  action_handlers_20250708102725.py  action_handlers_20250708102751.py  action_handlers_20250708110137.py  action_handlers_20250708110203.py  (+1089 more)
core_engine/: CMakeLists.txt  fsm_core.cpp  fsm_core.h
(+867 files in other folders)
